--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,10 @@
             <artifactId>commons-configuration</artifactId>
             <version>1.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>13.0</version>
+        </dependency>
     </dependencies>
 </project>
